--- a/app/templates/tickets/modals/tickets_update_modal.html
+++ b/app/templates/tickets/modals/tickets_update_modal.html
@@ -66,6 +66,7 @@
                         <!-- Push buttons to right side of footer -->
                         <div class="ml-auto">
                             <button type="submit" class="btn btn-primary">Update Ticket</button>
+                            <!-- TODO: Add Delete Ticket Functionality -->
                             <button type="button" class="btn btn-danger">Delete Ticket</button>
                         </div>
                     </div>
