--- a/app/templates/components/macros.html
+++ b/app/templates/components/macros.html
@@ -2,7 +2,7 @@
     <div class="metrics-card card flex-grow-1 mx-1" style="max-width: 300px;">
         <div class="card-body">
             <h5 class="card-title">{{ title }}</h5>
-            <p class="card-text">{{ text }}</p>
+            <h2 class="card-text">{{ text }}</h2>
         </div>
     </div>
 {% endmacro %}
