--- a/app/templates/inventory/modals/inventory_add_modal.html
+++ b/app/templates/inventory/modals/inventory_add_modal.html
@@ -18,10 +18,14 @@
                         <!-- Product Flavor -->
                         <div class="mb-3">
                             <label for="product-flavor" class="form-label">Flavor</label>
-                            <input type="text"
-                                class="form-control"
-                                id="product-flavor"
-                                name="product-flavor" required>
+                            <select class="form-select" 
+                                    name="product-flavor"
+                                    id="product-flavor" required>
+                                    <option disabled selected>Select flavor</option>
+                                    {% for flavor in supported_flavors %}
+                                        <option value="{{ flavor }}">{{ flavor.capitalize() }}</option>
+                                    {% endfor %}
+                            </select>
                         </div>
 
                         <!-- Product Container Size -->
@@ -29,7 +33,7 @@
                             <label for="product-container-size" class="form-label">Container Size</label>
                             <select class="form-select" id="product-container-size" name="product-container-size" required>
                                 <option disabled selected>Select size</option>
-                                {% for size in container_sizes %}
+                                {% for size in supported_container_sizes %}
                                     <option value="{{ size }}">{{ size.capitalize() }}</option>
                                 {% endfor %}
                             </select>
@@ -37,12 +41,15 @@
 
                         <!-- Product Price -->
                         <div class="mb-3">
-                            <label for="product-price" class="form-label">Price ($ USD)</label>
-                            <input type="number" step="0.01"
-                                class="form-control"
-                                id="product-price"
-                                name="product-price" 
-                                min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                            <label for="product-price" class="form-label">Price</label>
+                            <div class="input-group">
+                                <div class="input-group-text" id="btnGroupAddon">$</div>
+                                <input type="number" step="0.01"
+                                    class="form-control"
+                                    id="product-price"
+                                    name="product-price" 
+                                    min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                            </div>
                         </div>
 
                         <!-- Product Quantity -->
@@ -60,6 +67,7 @@
                             <select class="form-select" id="product-status" name="product-status" required>
                                 <option disabled selected>Select status</option>
                                 <option value="planned">Planned</option>
+                                <!-- <option value="committed">Committed</option> -->
                                 <option value="actual">Actual</option>
                             </select>
                         </div>
