--- a/app/templates/orders/modals/orders_add_modal.html
+++ b/app/templates/orders/modals/orders_add_modal.html
@@ -1,92 +1,145 @@
 <div class="modal" id="ordersModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Add Order</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+
             <!-- Form to allow user to add a new inventory item -->
             <form action="{{ url_for('orders.orders_add_order') }}" method="POST" id="addInventoryForm">
-                <div class="columns">
-                    <div class="column">
-                        <h3>Order Info</h3>
 
-                        <!-- Hidden inputs for user-id, cost -->
-                        <input type="hidden" name="user-id" id="user-id" value="{{ current_user.id }}">
-                        <input type="hidden" name="cost" id="cost" value="0">
-                        <input type="hidden" name="customer-status" id="customer-status" value="{{ current_user.status }}">
+                <h3>Order Info</h3>
+
+                <div class="row mb-5">
+                    
+                    <!-- Hidden Inputs -->
+                    <input type="hidden" name="total-cost" id="total-cost" value="0">
+                    <input type="hidden" name="customer-status" id="customer-status" value="{{ current_user.status }}">
+                    <input type="hidden" name="shipping-address" id="shipping-address" value="{{ current_user.shipping_address }}">
+                    <input type="hidden" name="billing-address" id="billing-address" value="{{ current_user.billing_address }}">
+
+                    <!-- Customer Selection -->
+                    <div class="col-md-3">
+                        <label for="user-id" class="form-label">Customer</label>
+                        <select class="form-control" id="user-id" name="user-id" required>
+                            <option value="{{ current_user.id }}" selected>{{ current_user.first_name }} {{ current_user.last_name }}</option>
+                            {% if current_user.is_admin %}
+                                {% if customers %}
+
+                                    {% for customer in customers %}
+                                        {% if customer.id != current_user.id %}
+                                            <option value="{{ customer.id }}">{{ customer.name }}</option>
+                                        {% endif %}
+                                    {% endfor %}
+
+                                {% endif %}
+                            {% endif %}
+                        </select>
+                    </div>
+
+                    <!-- Shipping Type -->
+                    <div class="col-md-3">
+                        <label for="shipping-type" class="form-label">Shipping Type</label>
+                        <select class="form-control" id="shipping-type" name="shipping-type" required>
+                            <option value="" disabled selected>Select shipping</option>
+                            <option value="standard">Standard</option>
+                            <option value="express">Express</option>
+                        </select>
+                    </div>
+
+                    <!-- Shipping Date -->
+                    <div class="col-md-3">
+                        <label for="shipping-date" class="form-label">Shipping Date</label>
+                        <input 
+                            type="text" 
+                            class="form-control shipping-date" 
+                            id="shipping-date" 
+                            name="shipping-date" 
+                            placeholder="MM/DD/YYYY" 
+                            pattern="^(0[1-9]|1[0-2])/(0[1-9]|[12][0-9]|3[01])/\d{4}$" required readonly>
+                    </div>
+
+                    <!-- Shipping Cost -->
+                    <div class="col-md-3">
+                        <label for="shipping-cost" class="form-label">Shipping Cost</label>
+                        <div class="input-group">
+                            <span class="input-group-text">$</span>
+                            <input 
+                                value="" 
+                                type="number" 
+                                class="form-control" 
+                                id="shipping-cost" 
+                                name="shipping-cost" 
+                                step="1" required readonly>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Line Items -->
+                <div id="line-items-container">
+                    <div class="line-item mb-3 row">
+                        <h5>Line Item 1</h5>
 
                         <!-- Flavor -->
-                        <div class="mb-3">
-                            <label for="flavor" class="form-label">Product</label>
-                            <select class="form-control" id="flavor" name="flavor" required>
-                                <!-- default disabled option -->
-                                <option value="" disabled selected>Select product</option>
-                                
-                                {% for flavor in unique_flavors %}
-                                    <option value="{{ flavor }}">{{ flavor }}</option>
-                                {% endfor %}
+                        <div class="col-md-3">
+                            <label for="flavor-0" class="form-label">Flavor</label>
+                            <select class="form-control flavor" id="flavor-0" name="order_items[0][flavor]" required>
+                                {% if unique_flavors %}
+                                    <option value="" disabled selected>Select flavor</option>
+                                    {% for flavor in unique_flavors %}
+                                        <option value="{{ flavor }}">{{ flavor }}</option>
+                                    {% endfor %}
+                                {% else %}
+                                    <option disabled selected>No flavors available</option>
+                                {% endif %}
                             </select>
                         </div>
 
-                        <!-- Container size -->
-                        <div class="mb-3">
-                            <label for="size" class="form-label">Size</label>
-                            <select class="form-control" id="container-size" name="container-size" required>
-                                <!-- default disabled option -->
+                        <!-- Container Size -->
+                        <div class="col-md-3">
+                            <label for="container-size-0" class="form-label">Container Size</label>
+                            <select class="form-control container-size" id="container-size-0" name="order_items[0][container-size]" required>
                                 <option value="" disabled selected>Select size</option>
+                                <!-- Options will be populated dynamically -->
                             </select>
                         </div>
 
-                        <!-- Product Quantity -->
-                        <div class="mb-3">
-                            <label for="quantity" class="form-label">Quantity <span id="max-quantity-container" hidden><b>(max: <span id="max-quantity"></span>)</b></span></label>
-                            <input type="number"
-                                   class="form-control"
-                                   id="quantity"
-                                   name="quantity"
-                                   min="1" required>
+                        <!-- Quantity -->
+                        <div class="col-md-3">
+                            <label 
+                                for="quantity-0" 
+                                class="form-label">
+                                Quantity <span class="max-quantity-container" id="max-quantity-container-0" hidden><b>(max: <span class="max-quantity" id="max-quantity-0"></span>)</b></span>
+                            </label>
+                            <input 
+                                type="number" 
+                                class="form-control quantity" 
+                                id="quantity-0" 
+                                name="order_items[0][quantity]" 
+                                min="1" step="1"
+                                oninput="this.value = this.value.replace(/\D/g, '')"
+                                required>
                         </div>
+                        
+                        <!-- Line-Item Cost -->
+                        <div class="col-md-3">
+                            <label for="line-item-cost-0" class="form-label">Line Item Cost</label>
 
-                        <!-- Customer Status -->
-                        <div class="mb-3">
-                            <label for="customer-status-display" class="form-label">Customer Status: <span id="customer-status-display">{{ current_user.status }}</span></label>
-                        </div>
-
-                    </div>
-                    
-                    <div class="column">
-                        <h3>Shipping</h3>
-                        <!-- Shipping Type -->
-                        <div class="mb-3">
-                            <label for="shipping-type" class="form-label">Shipping Type</label>
-                            <select class="form-control" id="shipping-type" name="shipping-type" required>
-                                <option value="standard" selected>Standard</option>
-                                <option value="express">Express</option>
-                            </select>
-                        </div>
-                        <!-- Estimated Shipping Date -->
-                        <div class="mb-3">
-                            <label for="shipping-date" class="form-label">Shipping Date</label>
-                            <input type="text"
-                                    class="form-control"
-                                    id="shipping-date"
-                                    name="shipping-date" 
-                                    placeholder="MM/DD/YYYY"
-                                    pattern="^(0[1-9]|1[0-2])/(0[1-9]|[12][0-9]|3[01])/\d{4}$" required>
-                        </div>
-
-                        <!-- Shipping Cost -->
-                        <div class="mb-3">
-                            <label for="shipping-cost" class="form-label">Shipping Cost</label>
-                            <input type="number" step="0.01"
-                                   class="form-control"
-                                   id="shipping-cost"
-                                   name="shipping-cost" 
-                                   min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                            <div class="input-group">
+                                <span class="input-group-text">$</span>
+                                <input type="number" class="form-control line-item-cost" id="line-item-cost-0" name="order_items[0][line-item-cost]" step="0.01" readonly>
+                            </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Add/Delete Line Item Buttons -->
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-outline-dark" id="add-line-item">+</button>
+                    <button type="button" class="btn btn-outline-dark" id="delete-line-item" hidden>-</button>
                 </div>
 
                 <!-- Modal Footer -->
