--- a/app/templates/orders/modals/orders_update_modal.html
+++ b/app/templates/orders/modals/orders_update_modal.html
@@ -1,9 +1,8 @@
-<!-- POP-UP MODAL FOR TRANSACTIONS -->
-<div class="modal" id="customersUpdateModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+<div class="modal" id="ordersUpdateModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Item</h5>
+                <h5 class="modal-title">Edit Item</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="modalBody">
@@ -14,15 +13,22 @@
                     <p>Product ID: <span id="product-id-display"></span></p>
 
                     <!-- Form of modifiable inputs (preset to current product attributes)-->
-                    <form id="updateForm" method="POST" action="/customers_update">
+                    <form id="updateForm" method="POST" action="/inventory_update">
                         <input type="hidden" name="product-id" class="product-id" id="product-id">
+
+                        <!-- Flavors dropdown -->
                         <div class="form-group">
                             <label for="product-flavor">Flavor</label>
-                            <input type="text"
-                                class="form-control product-flavor-input"
-                                id="product-flavor"
+                            <select class="form-control product-flavor-input" 
+                                id="product-flavor" 
                                 name="product-flavor" required>
+                                    {% for flavor in supported_flavors %}
+                                        <option value="{{ flavor }}">{{ flavor.capitalize() }}</option>
+                                    {% endfor %}
+                            </select>
                         </div>
+
+                        <!-- Price input -->
                         <div class="form-group">
                             <label for="product-price">Price <em>($ USD)</em></label>
                             <input type="number" step="0.01"
@@ -31,12 +37,38 @@
                                 name="product-price"
                                 min="0" pattern="^\d+(\.\d{1,2})?$" required>
                         </div>
+
+                        <!-- Quantity input -->
                         <div class="form-group">
                             <label for="product-quantity">Quantity</label>
                             <input type="number"
                                 class="form-control product-quantity-input"
                                 id="product-quantity"
                                 name="product-quantity" required>
+                        </div>
+
+                        <!-- Container Size dropdown -->
+                        <div class="form-group">
+                            <label for="product-status">Container Size</label>
+                            <select class="form-control product-container-size-input" 
+                                    id="product-container-size" 
+                                    name="product-container-size" required>
+                                {% for size in supported_container_sizes %}
+                                    <option value="{{ size }}">{{ size.capitalize() }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <!-- Status dropdown -->
+                        <div class="form-group">
+                            <label for="product-status">Status</label>
+                            <select class="form-control product-status-input" 
+                                    id="product-status" 
+                                    name="product-status" required>
+                                <option value="actual">Actual</option>
+                                <!-- <option value="committed">Committed</option> -->
+                                <option value="planned">Planned</option>
+                            </select>
                         </div>
                     </form>
                 </div>
@@ -48,11 +80,12 @@
                 <!-- Form to trigger server call without needing JS -->
                 <form id="deleteForm" method="POST" action="/inventory_delete" class="d-flex align-items-center">
                     
-                    <!-- Hidden input holding product id for server call -->
+                    <!-- Hidden inputs -->
                     <input type="hidden" name="product-id-delete" id="product-id-delete">
+                    <input type="hidden" name="user-id-delete" id="user-id-delete" value="{{ current_user.id }}">
                     
                     <!-- Button to delete product from inventory -->
-                    <button type="button" class="btn btn-danger">Delete</button>
+                    <button type="button" class="btn btn-danger" onclick="document.querySelector('#deleteForm').submit();">Delete</button>
                 </form>
 
                 <!-- Push buttons to right side of footer -->
