--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -9,8 +9,9 @@
 
 {% block content %}
 
-    {% include 'customers/modals/customers_add_modal.html' %}
+    {% include 'orders/modals/customers_update_modal.html' %}
     {% include 'orders/modals/orders_add_modal.html' %}
+    {% include 'orders/modals/orders_update_modal.html' %}
 
     <!-- Main content container -->
     <div class="container-md">
@@ -29,7 +30,7 @@
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
                     <h1>Customers</h1>
-                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#customerModal">+ New</button>
+                    <a type="button" class="btn modal-btn" href="{{ url_for('auth.register') }}">+ New</a>
                 </div>
                 <table class="table table-hover table-borderless">
                     {% if customers %}
@@ -69,21 +70,25 @@
                     <thead>
                         {% for key in orders[0].keys() %}
                             {% if key not in ['id'] %}
-                                <th scope="col">{{ key.capitalize() }}</th>
+                                <th scope="col">{{ key | attribute }}</th>
                             {% endif %}
                         {% endfor %}
                     </thead>
                     <tbody>
                         {% for order in orders %}
                             {% set outer_index = loop.index - 1 %}
-                            <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
-                                <td>{{ order.flavor }}</td>
-                                <td>{{ order.container_size }}</td>
-                                <td>{{ order.quantity }}</td>
-                                <td>{{ order.cost }}</td>
-                                <td>{{ order.shipping_type }}</td>
-                                <td>{{ order.shipping_date }}</td>
-                                <td>{{ order.shipping_cost }}</td>
+                            <tr data-bs-toggle="modal" data-bs-target="#ordersUpdateModal" data-id="{{ loop.index - 1 }}">
+                                {% for key, value in order.items() %}
+                                    {% if key not in ['id'] %}
+                                        {% if key == 'shipping_date' %}
+                                            <td>{{ value | date }}</td>
+                                        {% elif key in ['total_cost', 'shipping_cost'] %}
+                                            <td>{{ value | currency }}</td>
+                                        {% else %}
+                                            <td>{{ value }}</td>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
                             </tr>
                         {% endfor %}
                     </tbody>
