--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,6 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-
-
 </head>
 <body>
 
@@ -43,6 +41,7 @@
     </footer>
 
     <!-- JavaScript -->
+    <script src="{{ url_for('static', filename='js/base.js') }}"></script>
     {% block scripts %}
     {% endblock %}
 
