--- a/app/templates/shipments/shipments.html
+++ b/app/templates/shipments/shipments.html
@@ -4,7 +4,7 @@
 {% block title %}Shipments{% endblock %}
 
 {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/inventory.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/shipments.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
@@ -24,10 +24,10 @@
                 <h1>Shipments</h1>
             </div>
 
-            <!-- Inventory Add Modal -->
+            <!-- Shipment Add Modal -->
             <!-- include here -->
 
-            <!-- Inventory Table -->
+            <!-- Shipment Table -->
             <div class="mt-5">
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
@@ -35,26 +35,33 @@
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
                 </div>
                 <table class="table table-hover table-borderless">
-                    {% if products %}
+                    {% if shipments %}
                     <thead>
-                        {% for key in products[0].keys() %}
-                            {% if key not in ['id'] %}
-                                <th scope="col">{{ key.capitalize() }}</th>
-                            {% endif %}
-                        {% endfor %}
+                        <tr>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Shipment Date</th>
+                            <th scope="col">Boxes</th>
+                            <th scope="col">Partial</th>
+                            <th scope="col">Estimated Delivery</th>
+                            <th scope="col">Actual Delivery</th>
+                            <th scope="col">Type</th>
+                        </tr>
                     </thead>
                     <tbody>
-                        {% for product in products %}
-                            {% set outer_index = loop.index - 1 %}
-                            <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
-                                <td>{{ product.flavor }}</td>
-                                <td>{{ product.price }}</td>
-                                <td>{{ product.quantity }}</td>
+                        {% for shipment in shipments %}
+                        <tr onclick="openModal('{{ shipment.id }}')" id="shipment-row-{{ loop.index0 }}">
+                                <td>{{ shipment.order_id }}</td>
+                                <td>{{ shipment.date_shipped if shipment.date_shipped else "Not Shipped" }}</td>
+                                <td>{{ shipment.shippment_boxes }}</td>
+                                <td>{{ "Yes" if shipment.partial_delivery else "No" }}</td>
+                                <td>{{ shipment.estimated_date }}</td>
+                                <td>{{ shipment.delivery_date if shipment.delivery_date else "Not Delivered" }}</td>
+                                <td>{{ shipment.shippment_type }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
                     {% else %}
-                        No products found.
+                        No shipments found.
                     {% endif %}
                 </table>
             </div>
@@ -63,5 +70,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/inventory.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/shipments.js') }}"></script>
 {% endblock %}
