--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -43,12 +43,16 @@
                     </thead>
                     <tbody>
                         {% for customer in customers %}
-                            {% set outer_index = loop.index - 1 %}
-                            <tr onclick="openModal({{ customer }}, {{ customer['id'] }})" id="row-{{ outer_index }}">
-                                <td>{{ customer.name }}</td>
-                                <td>{{ customer.status }}</td>
-                                <td>{{ customer.shipping_address | address }}</td>
-                                <td>{{ customer.billing_address | address }}</td>
+                            <tr onclick="openModal({{ customer }}, {{ customer['id'] }})" id="row-{{ loop.index - 1 }}">
+                                {% for key, value in customer.items() %}
+                                    {% if key not in ['id'] %}
+                                        {% if key in ['shipping_address', 'billing_address'] %}
+                                            <td>{{ value | address }}</td>
+                                        {% else %}
+                                            <td>{{ value | title }}</td>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -65,7 +69,7 @@
                     <h1>Orders</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#ordersModal">+ New</button>
                 </div>
-                <table class="table table-hover table-borderless">
+                <table class="table table-hover table-borderless" id="orders-table">
                     {% if orders %}
                     <thead>
                         {% for key in orders[0].keys() %}
@@ -76,8 +80,7 @@
                     </thead>
                     <tbody>
                         {% for order in orders %}
-                            {% set outer_index = loop.index - 1 %}
-                            <tr data-bs-toggle="modal" data-bs-target="#ordersUpdateModal" data-id="{{ loop.index - 1 }}">
+                            <tr onclick="openOrderUpdateModal({{ order.id }})" id="row-{{ order.id }}">
                                 {% for key, value in order.items() %}
                                     {% if key not in ['id'] %}
                                         {% if key == 'shipping_date' %}
@@ -85,7 +88,7 @@
                                         {% elif key in ['total_cost', 'shipping_cost'] %}
                                             <td>{{ value | currency }}</td>
                                         {% else %}
-                                            <td>{{ value }}</td>
+                                            <td>{{ value | title }}</td>
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
